tests/fixtures/errors/empty-file/src/main.ts
import './empty';
console.log('Imported empty file');